# proxyhttp-td

./: .gitignore  CMakeLists.txt  README.md  RequestExample.txt  ResponseExample.txt  blacklist.txt  denyterms.txt  httputils.cpp  httputils.h  main.cpp  proxy.cpp  whitelist.txt
cache/: www.pudim.com.brhttp---www.pudim.com.br-estilo.css
include/: Request.hpp  Response.hpp  cache.hpp  constants.hpp  httpClient.hpp  httpServer.hpp  httputils.hpp
response_errors/: ReponseErrorNotFound.txt  ReponseErrorUnauthorized.txt  ReponseErrorUnauthorizedDeny.txt
src/: Cache.cpp  HttpClient.cpp  HttpServer.cpp  Request.cpp  Response.cpp  httputils.cpp  main.cpp  makefile  proxy.cpp
